# spreadsheet-to-page-in-db

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
config/: .env.example
const/: 数学Ⅰ.csv
const/csv/math/: example.csv  各教科で問われる単元集 - 数学修正用シート (8).csv
const/json/math/: block_eq.json  bold_text.json  check_answer_contents_numbered_list_item.json  check_answer_h3.json  complement_contents_toggle_h3.json  complement_h3.json  important_point_h3.json  important_point_text_bulleted_list_item.json  inline_eq_text.json  main_reference_toggle_underline.json  normal_text.json  paragraph.json  practice_answer_toggle.json  practice_answer_toggle_h3.json  practice_h3.json  practice_toggle.json  practice_toggle_h3.json  problem_h3.json  problem_text_toggle.json  problem_text_toggle_h3.json  reference_h3.json  sub_reference_toggle_underline.json
spreadsheet_to_page_in_db/: __init__.py  main.py  make_page.py  notion_api.py  notion_filter.py  notion_pre_process.py  old.py  parse.py  parse_old.py  pre_process.py  python_filter.py  spreadsheet_filter.py  test_main.py  variables.py
tests/: empty_equation_test.py  rich_text_test.py  test_append_block_children.py  test_make_page.py  test_notion_filter.py  test_parse.py  test_pre_process.py  test_spreadsheet_filter.py
